--- a/Periodico/indice.html
+++ b/Periodico/indice.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="C:\Users\Anton Luo\Desktop\Proyectos de visual\Periodico\CSS\estilo.css">
+    <link rel="stylesheet" href="CSS\estilo.css">
     <link rel="icon" href="\Imagenes\pagoda_japonesa.png" type="image/x-icon">
     </head>
 
