avance en la pagina web (creacion de multimedia en el  índice)

--- a/Periodico/indice.html
+++ b/Periodico/indice.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="CSS\estilo.css">
     <link rel="icon" href="\Imagenes\pagoda_japonesa.png" type="image/x-icon">
-    </head>
+</head>
 
-    <body>
+<body>
     <nav>
         <h3 id="tituloLogo">
             <p>J</p>
@@ -23,33 +23,55 @@
         <a class="navegacion" href="./datosContacto.html">Datos de contacto</a>
     </nav>
     <main>
-            <h1>Japón</h1>
-            <section>
-                <article>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4b0gzFXmtCk?autoplay=1&mute=1"
-                        title="gato tostada arcoiris" frameborder="2"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-                    <p>¿El anime es para niños?</p>
-                    <p>El anime japonés se refiere a un estilo específico de animación que se originó en Japón y ha llegado a
-                        ser reconocido
-                        y apreciado a nivel mundial. Pero actualmente a pesar de toda esa popularidad y expansión hay un tema
-                        controversico
-                        entre la gente que ve anime y es, si el anime es infantil.</p>
-                </article>
-            </section>
-            <section>
-                <article>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vh9R01jtrj0?si=Pdf9lsUso_wUMU5r"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-                    <p>¿Buscando comida Japonesa?</p>
-                    <p>Por aquí te dejamos un blog con los mejores sitios para visitar en japón, donde podrás disfrutar de la gastronomía del país en todo su esplendor.</p>
-                </article>
-            </section>
-            <footer>
-            </footer>
+        <h1 id="tituloPagina">ULTIMAS NOTICIAS EN JAPÓN</h1>
+        <section class="contenedor-noticias">
+            <article>
+                <iframe class="media" width="560" height="315"
+                    src="https://www.youtube.com/embed/4b0gzFXmtCk?autoplay=1&mute=1" title="gato tostada arcoiris"
+                    frameborder="2"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <h2 class="tituloArticulo">¿El anime es para niños?</h2>
+                <p>El anime japonés se refiere a un estilo específico de animación que se originó en Japón y ha
+                    llegado
+                    a
+                    ser reconocido
+                    y apreciado a nivel mundial. Pero actualmente a pesar de toda esa popularidad y expansión hay un
+                    tema
+                    controversico
+                    entre la gente que ve anime y es, si el anime es infantil.</p>
+            </article>
+            <article>
+                <iframe class="media" width="560" height="315"
+                    src="https://www.youtube.com/embed/4b0gzFXmtCk?autoplay=1&mute=1" title="gato tostada arcoiris"
+                    frameborder="2"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <h2 class="tituloArticulo">¿El anime es para niños?</h2>
+                <p>El anime japonés se refiere a un estilo específico de animación que se originó en Japón y ha
+                    llegado
+                    a
+                    ser reconocido
+                    y apreciado a nivel mundial. Pero actualmente a pesar de toda esa popularidad y expansión hay un
+                    tema
+                    controversico
+                    entre la gente que ve anime y es, si el anime es infantil.</p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vh9R01jtrj0?si=Pdf9lsUso_wUMU5r"
+                    title="Video de cocina" frameborder="2"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <h2 class="tituloArticulo">¿Buscando comida Japonesa?</h2>
+                <p>Por aquí te dejamos un blog con los mejores sitios para visitar en japón, donde podrás disfrutar de
+                    la gastronomía del país en todo su esplendor.</p>
+            </article>
+        </section>
     </main>
-    </body>   
+    <footer>
+    </footer>
+</body>
+
 </html>
