avance de la pagina web indice terminado

--- a/Periodico/indice.html
+++ b/Periodico/indice.html
@@ -1,89 +1,100 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-    <link rel="stylesheet" href="CSS\estilo.css">
-    <link rel="icon" href="\Imagenes\pagoda_japonesa.png" type="image/x-icon">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Inicio</title>
+        <link rel="stylesheet" href="CSS\estilo.css">
+        <link rel="icon" href="\Imagenes\pagoda_japonesa.png"
+            type="image/x-icon">
+    </head>
 
-<body>
-    <header>
-        <nav>
-            <h3 id="tituloLogo">
-                <p>J</p>
-                <p>apan</p>
-                <p>A</p>
-                <p>nime</p>
-                <p>N</p>
-                <p>ews</p>
-            </h3>
-            <a target="_blank" class="navegacion" href="./indice.html">Inicio</a>
-            <a target="_blank" class="navegacion" href="./datosContacto.html">Datos de contacto</a>
-        </nav>
-    </header>
-    <main>
-        <section id="tituloPagina">
-            <h1>ULTIMAS NOTICIAS EN JAPÓN</h1>
-        </section>
-        <section class="contenedor-noticias">
-            <article class="noticias-principales">
-                <iframe class="media" src="https://www.youtube.com/embed/4b0gzFXmtCk?autoplay=1&mute=1"
-                    title="gato tostada arcoiris" frameborder="2"
-                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-                <h2 class="tituloArticulo">¿El anime es para niños?</h2>
-                <p>El anime japonés se refiere a un estilo específico de animación que se originó en Japón y ha
-                    llegado
-                    a
-                    ser reconocido
-                    y apreciado a nivel mundial. Pero actualmente a pesar de toda esa popularidad y expansión hay un
-                    tema
-                    controversico
-                    entre la gente que ve anime y es, si el anime es infantil.</p>
-            </article>
-            <article class="noticias-secundarias">
-                <a href="">
-                    <h2>Otras noticias</h2>
-                </a>
-                <p>El anime japonés se refiere a un estilo específico de animación que se originó en Japón y ha
-                    llegado
-                    a
-                    ser reconocido
-                    y apreciado a nivel mundial. Pero actualmente a pesar de toda esa popularidad y expansión hay un
-                    tema
-                    controversico
-                    entre la gente que ve anime y es, si el anime es infantil.</p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vh9R01jtrj0?si=Pdf9lsUso_wUMU5r"
-                    title="Video de cocina" frameborder="2"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-                <h2 class="tituloArticulo">¿Buscando comida Japonesa?</h2>
-                <p>Por aquí te dejamos un blog con los mejores sitios para visitar en japón, donde podrás disfrutar de
-                    la gastronomía del país en todo su esplendor.</p>
-            </article>
-        </section>
-    </main>
-    <footer>
-        <section>
-            <section class="logo">
-                <img id="logo-footer" src="./Img/pagoda_japonesa.png" alt="Logo">
+    <body>
+        <header>
+            <nav>
+                <a target="_blank" class="navegacion"
+                    href="./indice.html">Inicio</a>
+                <a target="_blank" class="navegacion"
+                    href="./datosContacto.html">Datos de contacto</a>
+                <h3 id="tituloLogo">
+                    <p>J</p>
+                    <p>apan</p>
+                    <p>A</p>
+                    <p>nime</p>
+                    <p>N</p>
+                    <p>ews</p>
+                    <section id="logoPagoda">
+                        <img src="./Img/pagoda_japonesa.png" alt="Logo Pagoda">
+                    </section>
+                </h3>
+            </nav>
+        </header>
+        <main>
+            <section id="tituloPagina">
+                <h1>Ultimas noticias de Japón</h1>
             </section>
-            <section class="enlaces">
-                <a href="#">Inicio</a>
-                <a href="#">Contacto</a>
+            <section>
+                <article>
+                    <iframe class="media"
+                        src="https://www.youtube.com/embed/4b0gzFXmtCk?autoplay=1&mute=1"
+                        title="gato tostada arcoiris" frameborder="2"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                    <section class="texto-noticia">
+                        <h2 class="tituloArticulo">¿El anime es para niños?</h2>
+                        <p class="descripcion">El anime japonés se refiere a un
+                            estilo específico de
+                            animación que se originó en Japón y ha
+                            llegado
+                            a
+                            ser reconocido
+                            y apreciado a nivel mundial. Pero actualmente a
+                            pesar de toda esa popularidad y expansión hay un
+                            tema
+                            controversico
+                            entre la gente que ve anime y es, si el anime es
+                            infantil.</p>
+                    </section>
+                </article>
+                <article>
+                    <section class="texto-noticia">
+                        <h2 class="tituloArticulo">¿Buscando comida
+                            Japonesa?</h2>
+                        <p class="descripcion">Por aquí te dejamos un blog con
+                            los mejores sitios
+                            para
+                            visitar en japón, donde podrás disfrutar de
+                            la gastronomía del país en todo su esplendor.</p>
+                    </section>
+                    <iframe class="media"
+                        src="https://www.youtube.com/embed/YIRaCMq3rjU?si=lWXRskQHqtM0UrPy"
+                        title="YouTube video player" frameborder="2"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </article>
+                <article>
+                    <iframe class="media"
+                        src="https://www.youtube.com/embed/ifNet9KoyrU?si=-gb_n3uX1PIfyE1i"
+                        title="YouTube video player" frameborder="2"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                    <section class="texto-noticia">
+                        <a href=""><h2 class="tituloArticulo">Fallece Akira Toriyama, autor de Dragon Ball</h2></a>
+                        <p class="descripcion">Los múltiples medios oficiales de
+                            la franquicia de “Dragon Ball” y sus derivaciones
+                            informaron el fallecimiento de Akira Toriyama, autor
+                            del manga original, tras un hematoma subdural agudo
+                            a la edad de 68 años</p>
+                    </section>
+                </article>
             </section>
-        </section>
-        <section class="derechos">
-            <p>&copy; JapanAnimeNews. Todos los derechos reservados.</p>
-        </section>
-    </footer>
-</body>
+        </main>
+        <footer>
+            <section class="derechos">
+                <p>&copy; JapanAnimeNews. Todos los derechos reservados.</p>
+            </section>
+        </footer>
+    </body>
 
 </html>
