Solo faltan los datos de contacto

--- a/Periodico/indice.html
+++ b/Periodico/indice.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Inicio</title>
         <link rel="stylesheet" href="CSS\estilo.css">
-        <link rel="icon" href="\Imagenes\pagoda_japonesa.png"
+        <link rel="icon" href="./Img/pagoda_japonesa.png"
             type="image/x-icon">
     </head>
 
@@ -42,7 +42,7 @@
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                     <section class="texto-noticia">
-                        <h2 class="tituloArticulo">¿El anime es para niños?</h2>
+                        <a class="enlace-paginas" href="./anime.html" target="_blank"><h2 class="tituloArticulo">¿El anime es para niños?</h2></a>
                         <p class="descripcion">El anime japonés se refiere a un
                             estilo específico de
                             animación que se originó en Japón y ha
@@ -59,8 +59,8 @@
                 </article>
                 <article>
                     <section class="texto-noticia">
-                        <h2 class="tituloArticulo">¿Buscando comida
-                            Japonesa?</h2>
+                        <a class="enlace-paginas" href="./gastronomia.html" target="_blank"><h2 class="tituloArticulo">¿Buscando comida
+                            Japonesa?</h2></a>
                         <p class="descripcion">Por aquí te dejamos un blog con
                             los mejores sitios
                             para
@@ -80,7 +80,7 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                     <section class="texto-noticia">
-                        <a href=""><h2 class="tituloArticulo">Fallece Akira Toriyama, autor de Dragon Ball</h2></a>
+                        <a class="enlace-paginas" href="./AkiraToriyama.html" target="_blank"><h2 class="tituloArticulo">Fallece Akira Toriyama, autor de Dragon Ball</h2></a>
                         <p class="descripcion">Los múltiples medios oficiales de
                             la franquicia de “Dragon Ball” y sus derivaciones
                             informaron el fallecimiento de Akira Toriyama, autor
