--- a/Periodico/gastronomia.html
+++ b/Periodico/gastronomia.html
@@ -1,125 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gastronomia japonesa</title>
-    <link rel="icon"
-        href="C:\Users\yoyil\OneDrive\Escritorio\Ejercicios de Visula\Ejercicios_html\Segundo_Trimestre\Proyecto_periodico\Imagenes\pagoda_japonesa.png"
-        type="image/x-icon">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Comida Japonesa?</title>
+        <link rel="stylesheet" href="CSS\estilo.css">
+        <link rel="icon" href="./Img/pagoda_japonesa.png"
+            type="image/x-icon">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a target="_blank" class="navegacion"
+                    href="./indice.html">Inicio</a>
+                <a target="_blank" class="navegacion"
+                    href="./datosContacto.html">Datos de contacto</a>
+                <h3 id="tituloLogo">
+                    <p>J</p>
+                    <p>apan</p>
+                    <p>A</p>
+                    <p>nime</p>
+                    <p>N</p>
+                    <p>ews</p>
+                    <section id="logoPagoda">
+                        <img src="./Img/pagoda_japonesa.png" alt="Logo Pagoda">
+                    </section>
+                </h3>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <!--Aquí empieza la noticia-->
+                <h1 id="tituloPagina">¿Buscando comida japonesa?</h1>
 
-<body>
-
-    <main>
-        <!--Barra de navegación-->
-        <nav>
-            <h3><b>Japan Blog</b>
-                <hr>
-                <nav> <a
-                        href="C:\Users\yoyil\OneDrive\Escritorio\Ejercicios de Visula\Ejercicios_html\Segundo_Trimestre\Proyecto_periodico\Index.html">Inicio</a>&nbsp;&nbsp;&nbsp;<a
-                        href="C:\Users\yoyil\OneDrive\Escritorio\Ejercicios de Visula\Ejercicios_html\Segundo_Trimestre\Proyecto_periodico\Datos_de_contacto.html">Datos
-                        de contacto</a>
-                    <hr>
-                </nav>
-        </nav>
-        <section>
-            <!--Aquí empieza la noticia-->
-            <h1>¿Buscando comida japonesa?</h1>
-            <pre>
-            <img src="C:\Users\yoyil\OneDrive\Escritorio\Ejercicios de Visula\Ejercicios_html\Segundo_Trimestre\Proyecto_periodico\Imagenes\comida anime.jpg" alt="comida japonesa casera" width="800" />
-            </pre>
-            <br>
-            <h7>Antes de ir directo a la noticia por aquí os dejo un índice sobre la noticia</h7>
-        </section>
-        <hr width="" color="black" />
-        <section>
-            <!--Comienzo del índice-->
-            <h3>Índice</h3>
-            <ol>
-                <li>Comida Japonesa
-                    <ol type="1">
-                        <li>Definición</li>
-                        <li>Recomendaciones</li>
-                    </ol>
-                </li>
-                <li>Restaurantes</li>
-                <li>Opinión personal</li>
-                <li>Reflexión objetiva</li>
-                <li>Conclusión</li>
-            </ol>
-            <!--Final del índice-->
-        </section>
-        <hr width="" color="black" />
-        <section>
-            <h3>Comida japonesa</h3>
-            <p>La comida japonesa es conocida por su exquisitez, frescura y presentación artística. La gastronomía
-                japonesa ha ganado popularidad en todo el mundo y ofrece una amplia variedad de platos que van más allá
-                de los populares sushi y sashimi.La comida japonesa pone un gran énfasis en la estacionalidad, la
-                frescura de los ingredientes, la presentación artística y el equilibrio de sabores. La diversidad de
-                platos y estilos hace que la cocina japonesa sea apreciada por su complejidad y refinamiento.
-            </p>
-            <br>
-            <h3>Platos más típicos</h3>
-            <h5>Sushi y Sashimi</h5>
-            <ul>
-                <li>El sushi consiste en arroz sazonado con vinagre, azúcar y sal, combinado con pescado crudo o cocido,
-                    vegetales o huevos, envuelto en algas nori o acompañado de otros ingredientes.</li>
-                <li>El sashimi es simplemente pescado crudo o mariscos cortados en finas láminas.</li>
-            </ul>
-
-            <h5>Tempura</h5>
-            <ul>
-                <li>Un plato que consiste en mariscos, verduras o carne rebozados y fritos hasta lograr una textura
-                    crujiente.</li>
-                <li>La masa de tempura es muy ligera, y el plato se sirve a menudo con salsa de inmersión.</li>
-            </ul>
-
-            <h5>Ramen</h5>
-            <ul>
-                <li>Un popular plato de fideos japoneses que generalmente se sirve en caldo, acompañado de carne
-                    (tradicionalmente cerdo), vegetales y a veces huevo.</li>
-                <li>Hay diversas variedades regionales de ramen, cada una con su propio estilo de caldo y condimentos.
-                </li>
-            </ul>
-
-            <h5>Donburi</h5>
-            <ul>
-                <li>Un plato de arroz con diversos ingredientes que se colocan sobre el arroz en un tazón.</li>
-                <li>Algunas variantes comunes incluyen el Gyudon, el Katsudon y el Oyakodon.</li>
-            </ul>
-
-            <h5>Izakaya</h5>
-            <ul>
-                <li>Se refiere a los bares japoneses que sirven una variedad de pequeños platos diseñados para
-                    compartir.</li>
-                <li>Estos pueden incluir yakitori, edamame, takoyaki, entre otros.</li>
-            </ul>
-
-            <h5>Kaiseki</h5>
-            <ul>
-                <li>Una forma de alta cocina japonesa que implica una secuencia de platos cuidadosamente preparados para
-                    resaltar la estacionalidad y la frescura de los ingredientes.</li>
-                <li>Cada elemento se presenta de manera artística y se ajusta a la estética y la armonía.</li>
-            </ul>
-
-            <h5>Matcha</h5>
-            <ul>
-                <li>El té verde en polvo, conocido como matcha, es integral en la cultura japonesa.</li>
-                <li>Se utiliza en la ceremonia del té y también se incorpora a diversos postres y dulces.</li>
-            </ul>
-            <p>Estos son solo algunos de los platos más típicos que puedes encontrar en japón, pero no son todos. A
-                parte de estos platos hay todavía una ámplia selección de comida y bebida típica de la zona, además de
-                que dependiendo de la zona al igual que en todos los sitios puedes encontrar diferencias en todo tipos
-                de platos.</a></p>
-            <h3>Reflexión</h3>
-            <p>La gastronomía japonesa es una expresión artística que va más allá de la mera satisfacción del apetito;
-                es una fusión de tradición, cuidado por los detalles y un profundo respeto por la estacionalidad de los
-                ingredientes. En Japón, la cocina no es solo una experiencia sensorial, sino también un medio para
-                conectar con la naturaleza, la cultura y la historia del país.</p>
-        </section>
-    </main>
-</body>
-
+            </section>
+            <section>
+                <h3 class="tituloArticulo">Comida japonesa</h3>
+                <p class="descripcion">La comida japonesa es conocida por su exquisitez, frescura y
+                    presentación artística. La gastronomía
+                    japonesa ha ganado popularidad en todo el mundo y ofrece una
+                    amplia variedad de platos que van más allá
+                    de los populares sushi y sashimi.La comida japonesa pone un
+                    gran énfasis en la estacionalidad, la
+                    frescura de los ingredientes, la presentación artística y el
+                    equilibrio de sabores. La diversidad de
+                    platos y estilos hace que la cocina japonesa sea apreciada
+                    por su complejidad y refinamiento. En este apartado os vamos a enseñar varios lugares en los que podrás comer todo ese tipo de comida japonesa que ves en los animes</p>
+            </section>
+            <section class="section-imagenes-derivado">
+                <img class="media-noticias-derivantes"
+                src="./Img/comidaAnime1.jpg"
+                alt="comida japonesa" title="banquete"/>
+                <img class="media-noticias-derivantes"
+                src="./Img/comidaAnime5.jpg"
+                alt="comida japonesa" title="Omurice"/>
+                <img class="media-noticias-derivantes"
+                src="./Img/comidaAnime3.jpg"
+                alt="comida japonesa" title="oyakodon"/>
+            </section>
+            <section class="section-imagenes-derivado">
+                <img class="media-noticias-derivantes"
+                src="./Img/comidaAnime4.gif"
+                alt="comida japonesa" title="ramen"/>
+                <img class="media-noticias-derivantes"
+                src="./Img/comidaAnime2.jpg"
+                alt="comida japonesa" title="katsudon"/>
+            </section>
+        </main>
+        <footer>
+            <section class="derechos">
+                <p>&copy; JapanAnimeNews. Todos los derechos reservados.</p>
+            </section>
+        </footer>
+    </body>
 </html>
