--- a/Periodico/AkiraToriyama.html
+++ b/Periodico/AkiraToriyama.html
@@ -1,102 +1,97 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Falleció Akira Toriyama</title>
-        <link rel="stylesheet" href="CSS\estilo.css">
-        <link rel="icon" href="./Img/pagoda_japonesa.png"
-            type="image/x-icon">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a target="_blank" class="navegacion"
-                    href="./indice.html">Inicio</a>
-                <a target="_blank" class="navegacion"
-                    href="./datosContacto.html">Datos de contacto</a>
-                <h3 id="tituloLogo">
-                    <p>J</p>
-                    <p>apan</p>
-                    <p>A</p>
-                    <p>nime</p>
-                    <p>N</p>
-                    <p>ews</p>
-                    <section id="logoPagoda">
-                        <img src="./Img/pagoda_japonesa.png" alt="Logo Pagoda">
-                    </section>
-                </h3>
-            </nav>
-        </header>
-        <main>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Falleció Akira Toriyama</title>
+    <link rel="stylesheet" href="CSS\estilo.css">
+    <link rel="icon" href="./Img/pagoda_japonesa.png" type="image/x-icon">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a target="_blank" class="navegacion" href="./indice.html">Inicio</a>
+            <a target="_blank" class="navegacion" href="./datosContacto.html">Datos de contacto</a>
+            <h3 id="tituloLogo">
+                <p>J</p>
+                <p>apan</p>
+                <p>A</p>
+                <p>nime</p>
+                <p>N</p>
+                <p>ews</p>
+                <section id="logoPagoda">
+                    <img src="./Img/pagoda_japonesa.png" alt="Logo Pagoda">
+                </section>
+            </h3>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <!--Aquí empieza la noticia-->
+            <h1 id="tituloPagina">Falleció Akira Toriyama, autor de
+                Dragon
+                Ball</h1>
+
+        </section>
+        <section class="section-imagenes-derivado">
+            <section id="contenedor-dragonball-texto">
+                <p class="descripcion-dragonball">Akira Toriyama fue un dibujante de
+                    manga
+                    y diseñador de personajes japonés. Alcanzó el
+                    reconocimiento
+                    general por su serie de manga de gran éxito “Dr. Slump“,
+                    antes de crear “Dragon Ball” (su obra más famosa) y
+                    actuar
+                    como diseñador de personajes para varios videojuegos
+                    populares, como la serie “Dragon Quest“, “Chrono
+                    Trigger” y
+                    “Blue Dragon“. Toriyama está considerado como uno de los
+                    autores que cambiaron la historia del manga, ya que sus
+                    obras son muy influyentes y populares, sobre todo
+                    “Dragon
+                    Ball”, que muchos dibujantes citan como fuente de
+                    inspiración.
+
+                    Con “Dr. Slump” ganó el Premio de Manga Shogakukan de
+                    1981
+                    al mejor manga shonen, y llegó a vender más de 35
+                    millones
+                    de ejemplares en Japón. Fue adaptado a una exitosa serie
+                    de
+                    anime, con un segundo anime creado en 1997, trece años
+                    después de que terminara el manga. Su siguiente serie,
+                    “Dragon Ball”, se convertiría en uno de los mangas más
+                    populares y exitosos del mundo. Tras vender 260 millones
+                    de
+                    ejemplares en todo el mundo, es una de las series de
+                    manga
+                    más vendidas de todos los tiempos y se considera una de
+                    las
+                    principales razones del periodo en que la circulación
+                    del
+                    manga alcanzó su punto más alto, a mediados de los años
+                    ochenta y mediados de los noventa. En el extranjero, las
+                    adaptaciones al anime de Dragon Ball han tenido más
+                    éxito
+                    que el manga y se les atribuye el impulso de la
+                    popularidad
+                    del anime en el mundo occidental.</p>
+            </section>
             <section>
-                <section>
-                    <!--Aquí empieza la noticia-->
-                    <h1 id="tituloPagina">Falleció Akira Toriyama, autor de
-                        Dragon
-                        Ball</h1>
-
-                </section>
-                <section class="section-imagenes-derivado">
-                    <section id="contenedor-dragonball-texto">
-                    <p class="descripcion">Akira Toriyama fue un dibujante de
-                        manga
-                        y diseñador de personajes japonés. Alcanzó el
-                        reconocimiento
-                        general por su serie de manga de gran éxito “Dr. Slump“,
-                        antes de crear “Dragon Ball” (su obra más famosa) y
-                        actuar
-                        como diseñador de personajes para varios videojuegos
-                        populares, como la serie “Dragon Quest“, “Chrono
-                        Trigger” y
-                        “Blue Dragon“. Toriyama está considerado como uno de los
-                        autores que cambiaron la historia del manga, ya que sus
-                        obras son muy influyentes y populares, sobre todo
-                        “Dragon
-                        Ball”, que muchos dibujantes citan como fuente de
-                        inspiración.
-
-                        Con “Dr. Slump” ganó el Premio de Manga Shogakukan de
-                        1981
-                        al mejor manga shonen, y llegó a vender más de 35
-                        millones
-                        de ejemplares en Japón. Fue adaptado a una exitosa serie
-                        de
-                        anime, con un segundo anime creado en 1997, trece años
-                        después de que terminara el manga. Su siguiente serie,
-                        “Dragon Ball”, se convertiría en uno de los mangas más
-                        populares y exitosos del mundo. Tras vender 260 millones
-                        de
-                        ejemplares en todo el mundo, es una de las series de
-                        manga
-                        más vendidas de todos los tiempos y se considera una de
-                        las
-                        principales razones del periodo en que la circulación
-                        del
-                        manga alcanzó su punto más alto, a mediados de los años
-                        ochenta y mediados de los noventa. En el extranjero, las
-                        adaptaciones al anime de Dragon Ball han tenido más
-                        éxito
-                        que el manga y se les atribuye el impulso de la
-                        popularidad
-                        del anime en el mundo occidental.</p>
-                    </section>
-                    <section>
-                        <img id="media-noticias-derivantes-dragonball"
-                            src="./Img/Akira-Toriyama.jpg"
-                            alt="Autor de DragonBall y muchas mas obras" title="Autor: Akira Toriyama" />
-                        <img id="media-noticias-derivantes-dragonball"
-                            src="./Img/DragonBall.jpg"
-                            alt="Anime de peleas" title="Anime (Dragon Ball)" />
-                    </section>
-                </section>
+                <img id="media-noticias-derivantes-dragonball" src="./Img/Akira-Toriyama.jpg"
+                    alt="Autor de DragonBall y muchas mas obras" title="Autor: Akira Toriyama" />
+                <img id="media-noticias-derivantes-dragonball" src="./Img/DragonBall.jpg" alt="Anime de peleas"
+                    title="Anime (Dragon Ball)" />
             </section>
-        </main>
-        <footer>
-            <section class="derechos">
-                <p>&copy; JapanAnimeNews. Todos los derechos reservados.</p>
-            </section>
-        </footer>
-    </body>
+        </section>
+    </main>
+    <footer>
+        <section class="derechos">
+            <p>&copy; JapanAnimeNews. Todos los derechos reservados.</p>
+        </section>
+    </footer>
+</body>
+
 </html>
