--- a/LuoAnton_PeriodicoCSS/gastronomia.html
+++ b/LuoAnton_PeriodicoCSS/gastronomia.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Comida Japonesa?</title>
-        <link rel="stylesheet" href="CSS\estilo.css">
+        <link rel="stylesheet" href="./CSS/estilo.css">
         <link rel="icon" href="./Img/pagoda_japonesa.png"
             type="image/x-icon">
     </head>
