Añadimos los comentarios al codigo

--- a/LuoAnton_PeriodicoCSS/AkiraToriyama.html
+++ b/LuoAnton_PeriodicoCSS/AkiraToriyama.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--Aqui se engloba la barra de navegación en todo el header-->
     <header>
         <nav>
             <a target="_blank" class="navegacion" href="./indice.html">Inicio</a>
@@ -28,12 +29,11 @@
         </nav>
     </header>
     <main>
+        <!--A partir de esta parte empezamos con el contenido de la pagina web-->
         <section>
-            <!--Aquí empieza la noticia-->
             <h1 id="tituloPagina">Falleció Akira Toriyama, autor de
                 Dragon
                 Ball</h1>
-
         </section>
         <section class="section-imagenes-derivado">
             <section id="contenedor-dragonball-texto">
