--- a/LuoAnton_PeriodicoCSS/anime.html
+++ b/LuoAnton_PeriodicoCSS/anime.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        <!--Aqui se engloba la barra de navegación en todo el header-->
         <header>
             <nav>
                 <a target="_blank" class="navegacion"
@@ -31,10 +32,11 @@
             </nav>
         </header>
         <main>
+            <!--A partir de esta parte empezamos con el contenido de la pagina web-->
             <section>
-                <!--Aquí empieza la noticia-->
                 <h1 id="tituloPagina">¿El anime es para niños?</h1>
             </section>
+            <!--En esta parte agrupamos dos imagenes en una caja-->
             <section class="section-imagenes-derivado">
                 <img class="media-noticias-derivantes" src="./Img/gifAnime(Mashle).gif"
                     alt="Gif de anime"
@@ -44,6 +46,7 @@
                     title="Anime (Attack on Titan)" />
             </section>
             <section>
+                <!--Separamos cada noticia por articulos para así tener una correcta organización-->
                 <article class="texto-noticia-derivantes">
                     <h3 class="tituloArticulo">¿Qué es el anime?</h3>
                     <p class="descripcion">El anime japonés se refiere a un
@@ -103,6 +106,7 @@
                 </article>
             </section>
         </main>
+        <!--En esta parte ponemos el final de la página web en la que simplemente añadimos unos términos y condiciones-->
         <footer>
             <section class="derechos">
                 <p>&copy; JapanAnimeNews. Todos los derechos reservados.</p>
