--- a/LuoAnton_PeriodicoCSS/datosContacto.html
+++ b/LuoAnton_PeriodicoCSS/datosContacto.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--Aqui se engloba la barra de navegación en todo el header-->
     <header>
         <nav>
             <a target="_blank" class="navegacion" href="./indice.html">Inicio</a>
@@ -28,6 +29,7 @@
         </nav>
     </header>
     <main>
+        <!--Aqui ponemos toda la información de contacto dentro de una caja para poder modificarlo todo con una sola caja de css-->
         <section>
             <h1 id="tituloPagina">Datos de contacto</h1>
             <p class="descripcion">Si desea ponerse en contacto con nostros podrá hacerlo a través de:</p>
