--- a/LuoAnton_PeriodicoCSS/gastronomia.html
+++ b/LuoAnton_PeriodicoCSS/gastronomia.html
@@ -10,6 +10,7 @@
             type="image/x-icon">
     </head>
     <body>
+        <!--Aqui se engloba la barra de navegación en todo el header-->
         <header>
             <nav>
                 <a target="_blank" class="navegacion"
@@ -30,11 +31,11 @@
             </nav>
         </header>
         <main>
+            <!--A partir de esta parte empezamos con el contenido de la pagina web-->
             <section>
-                <!--Aquí empieza la noticia-->
                 <h1 id="tituloPagina">¿Buscando comida japonesa?</h1>
-
             </section>
+            <!--Para separar el titulo y texto de la imagenes los separamos en un grupo aparte-->
             <section>
                 <h3 class="tituloArticulo">Comida japonesa</h3>
                 <p class="descripcion">La comida japonesa es conocida por su exquisitez, frescura y
@@ -48,6 +49,7 @@
                     platos y estilos hace que la cocina japonesa sea apreciada
                     por su complejidad y refinamiento. En este apartado os vamos a enseñar varios lugares en los que podrás comer todo ese tipo de comida japonesa que ves en los animes</p>
             </section>
+            <!--Englobamos las imagenes en dos sections para separarlo en dos filas-->
             <section class="section-imagenes-derivado">
                 <img class="media-noticias-derivantes"
                 src="./Img/comidaAnime1.jpg"
