--- a/LuoAnton_PeriodicoCSS/indice.html
+++ b/LuoAnton_PeriodicoCSS/indice.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        <!--Aqui se engloba la barra de navegación en todo el header-->
         <header>
             <nav>
                 <a target="_blank" class="navegacion"
@@ -30,11 +31,14 @@
                 </h3>
             </nav>
         </header>
+        <!--A partir de esta parte empezamos con el contenido de la pagina web-->
         <main>
             <section id="tituloPagina">
                 <h1>Ultimas noticias de Japón</h1>
             </section>
+            <!--Englobamos todo el contenido apare del título en una caja para así poder modificar adecuadamente el css-->
             <section>
+                <!--Separamos cada noticia por articulos para así tener una correcta organización-->
                 <article>
                     <iframe class="media"
                         src="https://www.youtube.com/embed/4b0gzFXmtCk?autoplay=1&mute=1"
@@ -90,6 +94,7 @@
                 </article>
             </section>
         </main>
+        <!--En esta parte ponemos el final de la página web en la que simplemente añadimos unos términos y condiciones-->
         <footer>
             <section class="derechos">
                 <p>&copy; JapanAnimeNews. Todos los derechos reservados.</p>
