Solucion de la pagina de akira

--- a/LuoAnton_PeriodicoCSS/AkiraToriyama.html
+++ b/LuoAnton_PeriodicoCSS/AkiraToriyama.html
@@ -35,7 +35,7 @@
                 Dragon
                 Ball</h1>
         </section>
-        <section class="section-imagenes-derivado">
+        <section id="section-imagenes-derivado-dragonball">
             <section id="contenedor-dragonball-texto">
                 <p class="descripcion-dragonball">Akira Toriyama fue un dibujante de
                     manga
