--- a/LuoAnton_PeriodicoCSS/gastronomia.html
+++ b/LuoAnton_PeriodicoCSS/gastronomia.html
@@ -47,7 +47,7 @@
                     frescura de los ingredientes, la presentación artística y el
                     equilibrio de sabores. La diversidad de
                     platos y estilos hace que la cocina japonesa sea apreciada
-                    por su complejidad y refinamiento. En este apartado os vamos a enseñar varios lugares en los que podrás comer todo ese tipo de comida japonesa que ves en los animes</p>
+                    por su complejidad y refinamiento.</p>
             </section>
             <!--Englobamos las imagenes en dos sections para separarlo en dos filas-->
             <section class="section-imagenes-derivado">
